--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "gsap": "^3.12.2",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-chat-engine": "^1.11.28",
